# tensors

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.rocm  LICENSE  PLAN.md  README.md  RELEASE.md  STUFF.md  TASK.md  TODO.md  app.yml  gguf.sh  justfile  nuitka_build.py  pyproject.toml  requirements.txt  start.sh  tensors.py
.claude/: settings.local.json
.claude/commands/: deploy.md  reinstall.md
.github/workflows/: ci.yml  publish.yml
scripts/: convert.sh  deploy.sh  reinstall.py
tensors/: __init__.py  api.py  characters.py  cli.py  client.py  comfy.py  comfyui.py  config.py  db.py  fragments.py  remote.py  scenes.py  templates.py
tensors/server/: __init__.py  civitai_routes.py  comfyui_api_routes.py  db_routes.py  download_routes.py  gallery_routes.py  generate_routes.py  models.py  models_routes.py  process.py  routes.py  sd_client.py  search_routes.py
tensors/server/static/: index.html
tensors/server/static/assets/: index-BIJHSBBO.js  index-BsfOJ0lW.js  index-BvuF0jag.css  index-BwgrwH8m.css  index-CFzDN2Nk.js  index-CX4x_bxc.js  index-CcuP2dTH.css  index-D2fa7i11.css  index-DEHUU-Zz.js  index-DUfzPzFk.css  index-Dd0b3iAi.js  index-DmOZ-7Sw.js  index-J_qzb7Jl.js  index-Ljwp9hgM.css  index-QncGJEyk.css  index-lqI0My76.css
tensors/server/ui/src/: App.vue
tensors/server/ui/src/api/: client.ts
tensors/server/ui/src/components/: GalleryView.vue  GenerateView.vue  ModelCard.vue  SearchView.vue
tensors/server/ui/src/stores/: app.ts
tensors/server/ui/src/types/: index.ts
tests/: conftest.py  test_characters.py  test_client.py  test_db.py  test_fragments.py  test_generate_input.py  test_generate_parallel.py  test_scenes.py  test_server.py  test_style_sweep.py  test_tensors.py
web/: package.json  tsconfig.json
web/src/lib/: comfy-client.ts
web/src/types/: comfy.ts
